--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name="FireApp">
         <activity android:name=".intro">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +20,8 @@
         </activity>
         <activity android:name=".login" />
         <activity android:name=".signup" />
-        <activity android:name=".emailverification"></activity>
+        <activity android:name=".emailverification" />
+        <activity android:name=".profile"></activity>
     </application>
 
 </manifest>
