--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
+    compile 'com.android.support:appcompat-v7:22.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
