--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:design:25.1.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.google.firebase:firebase-core:9.6.0'
@@ -39,6 +40,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:9.6.0'
     compile 'com.google.firebase:firebase-storage:9.6.0'
     compile 'com.google.android.gms:play-services:9.6.0'
+    compile 'com.firebaseui:firebase-ui:0.4.3'
 
     compile 'com.firebase:firebase-client-android:2.5.2'
 
