--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".signup" />
         <activity android:name=".emailverification" />
         <activity android:name=".profile" />
-        <activity android:name=".home"></activity>
+        <activity android:name=".home" />
+        <activity android:name=".giftexchange"></activity>
     </application>
 
 </manifest>
