Added info to home screen and added a few small features

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".emailverification" />
         <activity android:name=".profile" />
         <activity android:name=".home" />
-        <activity android:name=".giftexchange"></activity>
+        <activity android:name=".giftexchange" />
+        <activity android:name=".info"></activity>
     </application>
 
 </manifest>
