--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cs48.g12.gauchogifts">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".FireApp"
@@ -28,7 +27,8 @@
             android:name=".navheader"
             android:label="@string/title_activity_navheader"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".forgotpassword"></activity>
+        <activity android:name=".forgotpassword" />
+        <activity android:name=".joinedexchange"></activity>
     </application>
 
 </manifest>
