--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".welcomeslides" />
         <activity android:name=".SlideManager" />
         <activity android:name=".joinedexchange" />
+        <activity android:name=".PostDeadlineExchange"></activity>
     </application>
 
 </manifest>
